// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TrackDetails > matches the snapshot 1`] = `
"<ul class="trackDetails">
  <li class="detail">
    <p class="strong title">Title</p>
    <p class="content">title</p>
  </li>
  <li class="detail">
    <p class="strong title">Album</p>
    <div class="content"><a class="link">album</a></div>
  </li>
  <li class="detail">
    <p class="strong title">Artists</p>
    <div class="content">
      <ul class="meta list">
        <li class="listItem" data-test-id="list-item"><a>name</a></li>
        <li class="listItem" data-test-id="list-item"><a>name1</a></li>
      </ul>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Track</p>
    <p class="content">1</p>
  </li>
  <li class="detail">
    <p class="strong title">Duration</p>
    <p class="content">00:19</p>
  </li>
  <li class="detail">
    <p class="strong title">Year</p>
    <p class="content">2024</p>
  </li>
  <li class="detail">
    <p class="strong title">Disc number</p>
    <p class="content">1</p>
  </li>
  <li class="detail">
    <p class="strong title">Genre</p>
    <div class="content">
      <ul class="meta list">
        <li class="listItem" data-test-id="list-item"><a>name</a></li>
        <li class="listItem" data-test-id="list-item"><a>name1</a></li>
      </ul>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Size</p>
    <p class="content">16</p>
  </li>
  <ul>
    <li class="detail">
      <p class="strong title">Content type</p>
      <p class="content">contentType</p>
    </li>
    <li class="detail">
      <p class="strong title">Suffix</p>
      <p class="content">suffix</p>
    </li>
    <li class="detail">
      <p class="strong title">Bitrate</p>
      <p class="content">15</p>
    </li>
    <li class="detail">
      <p class="strong title">Path</p>
      <p class="content">path</p>
    </li>
  </ul>
</ul>"
`;

exports[`TrackDetails > when a track key is undefined > matches the snapshot 1`] = `
"<ul class="trackDetails">
  <li class="detail">
    <p class="strong title">Title</p>
    <p class="content">-</p>
  </li>
  <li class="detail">
    <p class="strong title">Album</p>
    <div class="content"><a class="link">album</a></div>
  </li>
  <li class="detail">
    <p class="strong title">Artists</p>
    <div class="content">
      <ul class="meta list">
        <li class="listItem" data-test-id="list-item"><a>name</a></li>
        <li class="listItem" data-test-id="list-item"><a>name1</a></li>
      </ul>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Track</p>
    <p class="content">1</p>
  </li>
  <li class="detail">
    <p class="strong title">Duration</p>
    <p class="content">00:19</p>
  </li>
  <li class="detail">
    <p class="strong title">Year</p>
    <p class="content">2024</p>
  </li>
  <li class="detail">
    <p class="strong title">Disc number</p>
    <p class="content">1</p>
  </li>
  <li class="detail">
    <p class="strong title">Genre</p>
    <div class="content">
      <ul class="meta list">
        <li class="listItem" data-test-id="list-item"><a>name</a></li>
        <li class="listItem" data-test-id="list-item"><a>name1</a></li>
      </ul>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Size</p>
    <p class="content">16</p>
  </li>
  <ul>
    <li class="detail">
      <p class="strong title">Content type</p>
      <p class="content">contentType</p>
    </li>
    <li class="detail">
      <p class="strong title">Suffix</p>
      <p class="content">suffix</p>
    </li>
    <li class="detail">
      <p class="strong title">Bitrate</p>
      <p class="content">15</p>
    </li>
    <li class="detail">
      <p class="strong title">Path</p>
      <p class="content">path</p>
    </li>
  </ul>
</ul>"
`;

exports[`TrackDetails > when artists is an empty array > matches the snapshot 1`] = `
"<ul class="trackDetails">
  <li class="detail">
    <p class="strong title">Title</p>
    <p class="content">title</p>
  </li>
  <li class="detail">
    <p class="strong title">Album</p>
    <div class="content"><a class="link">album</a></div>
  </li>
  <li class="detail">
    <p class="strong title">Artists</p>
    <div class="content">
      <p>-</p>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Track</p>
    <p class="content">1</p>
  </li>
  <li class="detail">
    <p class="strong title">Duration</p>
    <p class="content">00:19</p>
  </li>
  <li class="detail">
    <p class="strong title">Year</p>
    <p class="content">2024</p>
  </li>
  <li class="detail">
    <p class="strong title">Disc number</p>
    <p class="content">1</p>
  </li>
  <li class="detail">
    <p class="strong title">Genre</p>
    <div class="content">
      <ul class="meta list">
        <li class="listItem" data-test-id="list-item"><a>name</a></li>
        <li class="listItem" data-test-id="list-item"><a>name1</a></li>
      </ul>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Size</p>
    <p class="content">16</p>
  </li>
  <ul>
    <li class="detail">
      <p class="strong title">Content type</p>
      <p class="content">contentType</p>
    </li>
    <li class="detail">
      <p class="strong title">Suffix</p>
      <p class="content">suffix</p>
    </li>
    <li class="detail">
      <p class="strong title">Bitrate</p>
      <p class="content">15</p>
    </li>
    <li class="detail">
      <p class="strong title">Path</p>
      <p class="content">path</p>
    </li>
  </ul>
</ul>"
`;

exports[`TrackDetails > when genres is an empty array > matches the snapshot 1`] = `
"<ul class="trackDetails">
  <li class="detail">
    <p class="strong title">Title</p>
    <p class="content">title</p>
  </li>
  <li class="detail">
    <p class="strong title">Album</p>
    <div class="content"><a class="link">album</a></div>
  </li>
  <li class="detail">
    <p class="strong title">Artists</p>
    <div class="content">
      <ul class="meta list">
        <li class="listItem" data-test-id="list-item"><a>name</a></li>
        <li class="listItem" data-test-id="list-item"><a>name1</a></li>
      </ul>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Track</p>
    <p class="content">1</p>
  </li>
  <li class="detail">
    <p class="strong title">Duration</p>
    <p class="content">00:19</p>
  </li>
  <li class="detail">
    <p class="strong title">Year</p>
    <p class="content">2024</p>
  </li>
  <li class="detail">
    <p class="strong title">Disc number</p>
    <p class="content">1</p>
  </li>
  <li class="detail">
    <p class="strong title">Genre</p>
    <div class="content">
      <p>-</p>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Size</p>
    <p class="content">16</p>
  </li>
  <ul>
    <li class="detail">
      <p class="strong title">Content type</p>
      <p class="content">contentType</p>
    </li>
    <li class="detail">
      <p class="strong title">Suffix</p>
      <p class="content">suffix</p>
    </li>
    <li class="detail">
      <p class="strong title">Bitrate</p>
      <p class="content">15</p>
    </li>
    <li class="detail">
      <p class="strong title">Path</p>
      <p class="content">path</p>
    </li>
  </ul>
</ul>"
`;

exports[`TrackDetails > when track information is not defined > matches the snapshot 1`] = `
"<ul class="trackDetails">
  <li class="detail">
    <p class="strong title">Title</p>
    <p class="content">title</p>
  </li>
  <li class="detail">
    <p class="strong title">Album</p>
    <div class="content"><a class="link">album</a></div>
  </li>
  <li class="detail">
    <p class="strong title">Artists</p>
    <div class="content">
      <ul class="meta list">
        <li class="listItem" data-test-id="list-item"><a>name</a></li>
        <li class="listItem" data-test-id="list-item"><a>name1</a></li>
      </ul>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Track</p>
    <p class="content">1</p>
  </li>
  <li class="detail">
    <p class="strong title">Duration</p>
    <p class="content">00:19</p>
  </li>
  <li class="detail">
    <p class="strong title">Year</p>
    <p class="content">2024</p>
  </li>
  <li class="detail">
    <p class="strong title">Disc number</p>
    <p class="content">1</p>
  </li>
  <li class="detail">
    <p class="strong title">Genre</p>
    <div class="content">
      <ul class="meta list">
        <li class="listItem" data-test-id="list-item"><a>name</a></li>
        <li class="listItem" data-test-id="list-item"><a>name1</a></li>
      </ul>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Size</p>
    <p class="content">16</p>
  </li>
  <!--v-if-->
</ul>"
`;
